[gd_scene load_steps=16 format=3 uid="uid://bu57v5cln1y64"]

[ext_resource type="Script" path="res://interactive/checkpoint.gd" id="1_uf1ik"]
[ext_resource type="Texture2D" uid="uid://dsligvtxga0r3" path="res://addons/kenney_particle_pack/star_07.png" id="2_1dvdi"]
[ext_resource type="Material" uid="uid://c78qerjjpjysg" path="res://materials/light_proto.tres" id="2_j2e26"]
[ext_resource type="AudioStream" uid="uid://b17k3nk28bwae" path="res://sounds/lighting-a-fire-14421.mp3" id="3_hrjk7"]
[ext_resource type="AudioStream" uid="uid://dh28je1fr2q3c" path="res://sounds/fire-6699.mp3" id="4_kvlsv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p0mq5"]
transparency = 1
albedo_color = Color(0.470588, 1, 1, 0.705882)

[sub_resource type="Curve" id="Curve_hiuex"]
_data = [Vector2(0, 0.873684), 0.0, 0.0, 0, 0, Vector2(0.521739, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_u7dk5"]
curve = SubResource("Curve_hiuex")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nytx6"]
gravity = Vector3(0, -1, 0)
initial_velocity_min = 0.5
initial_velocity_max = 1.5
scale_curve = SubResource("CurveTexture_u7dk5")
turbulence_enabled = true
turbulence_noise_strength = 6.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6xxpx"]
transparency = 1
albedo_color = Color(0.505882, 1, 1, 1)
albedo_texture = ExtResource("2_1dvdi")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_qkr26"]
material = SubResource("StandardMaterial3D_6xxpx")

[sub_resource type="Animation" id="Animation_0ren3"]
resource_name = "light_flicker"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OmniLight3D:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 0.5, 1),
"update": 0,
"values": [0.0, 2.0, 0.5]
}

[sub_resource type="Animation" id="Animation_t24pc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OmniLight3D:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jxjbs"]
_data = {
"RESET": SubResource("Animation_t24pc"),
"light_flicker": SubResource("Animation_0ren3")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_2fkmd"]
size = Vector3(2.09406, 1, 2.06391)

[node name="Checkpoint" type="Node3D"]
script = ExtResource("1_uf1ik")

[node name="Lantern" type="CSGCombiner3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="Lantern"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.901085, -1.15514)
size = Vector3(0.348215, 2.93949, 0.328407)
material = ExtResource("2_j2e26")

[node name="CSGBox3D2" type="CSGBox3D" parent="Lantern"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.99482, -0.595937)
size = Vector3(0.348215, 0.25091, 0.79467)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Lantern"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.74629, -0.373633)
radius = 0.0464748
height = 0.234395

[node name="CSGBox3D3" type="CSGBox3D" parent="Lantern"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.41672, -0.381112)
size = Vector3(0.405567, 0.464371, 0.383577)
material = SubResource("StandardMaterial3D_p0mq5")

[node name="GPUParticles3D" type="GPUParticles3D" parent="Lantern/CSGBox3D3"]
emitting = false
process_material = SubResource("ParticleProcessMaterial_nytx6")
draw_pass_1 = SubResource("QuadMesh_qkr26")

[node name="OmniLight3D" type="OmniLight3D" parent="Lantern/CSGBox3D3"]
light_color = Color(0.337255, 0.662745, 1, 1)
light_energy = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lantern/CSGBox3D3"]
libraries = {
"": SubResource("AnimationLibrary_jxjbs")
}

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0914145, 0)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_2fkmd")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_hrjk7")

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_kvlsv")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
